project(mammoth C CXX)
cmake_minimum_required(VERSION 3.5)

set(QT5_ROOT_PATH D:/Qt/Qt5.8.0)
set(PCL_ROOT_PATH D:/PCL 1.8.0)
set(OpenCV_ROOT_PATH D:/opencv/opencv)
set(PCAP_ROOT_PATH D:/WinPacp/WpdPack)
set(GLEW_ROOT_PATH D:/glew)

if(UNIX)
    include(cmake/configuration.cmake)
endif()

if(WIN32)
    set(QT5_DIR ${QT5_ROOT_PATH}/5.8/mingw53_32)
    set(GLEW_DIR ${GLEW_ROOT_PATH})
    set(PCL_DIR ${PCL_ROOT_PATH}/cmake)
    set(OpenCV_DIR ${OpenCV_ROOT_PATH}/build)
    set(PCAP_DIR ${PCAP_ROOT_PATH})
    set(PCAP_INCLUDE_DIR ${PCAP_DIR}/Include)
    set(CMAKE_PREFIX_PATH ${QT5_DIR};${GLEW_DIR})

    file(GLOB_RECURSE HEADERS "include/*.h" "include/*.hpp")
    file(GLOB_RECURSE PCAP_HEADERS "${PCAP_DIR}/Include/*.h" "${PCAP_DIR}/Include/pcap/*.h")
    file(GLOB_RECURSE SRCS "src/*.c" "src/*.cpp")
    file(GLOB_RECURSE PCAP_LIBS "${PCAP_DIR}/Lib/x64/*.lib")
    file(GLOB_RECURSE GLEW_LIBS "D:/glew/lib/*.lib")
    file(GLOB_RECURSE MY_LIBS "E:/CrossPlatformCpp/MammothCar/lib/*.lib")
elseif(UNIX)
    set(PCL_DIR /usr/local/pcl/share/pcl-1.8)
    find_package(Boost COMPONENTS filesystem REQUIRED)
endif()

find_package(PCL REQUIRED)
find_package(OpenCV REQUIRED)
# find_package(MRPT REQUIRED base;hwdrivers;gui;maps;bayes;slam)

include_directories(${OpenCV_INCLUDE_DIRS})
include_directories(${Boost_INCLUDE_DIRS})
include_directories(${PCL_INCLUDE_DIRS})
include_directories(${PCAP_INCLUDE_DIR})
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
#include_directories(${KALMAN_FILTER_INCLUDE_DIR})
# include_directories(${MRPT_INCLUDE_DIRS})

if(WIN32)
    add_executable(${PROJECT_NAME} ${SRCS} ${HEADERS})
    target_link_libraries(${PROJECT_NAME} ${PCL_LIBRARIES} ${OpenCV_LIBRARIES} ${PCAP_LIBS} ${GLEW_LIBS} ${MY_LIBS})
    if(CMAKE_COMPILER_IS_GNUCXX AND NOT CMAKE_BUILD_TYPE MATCHES "Debug")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /O3")
    endif(CMAKE_COMPILER_IS_GNUCXX AND NOT CMAKE_BUILD_TYPE MATCHES "Debug")
elseif(UNIX)
    add_definitions(-Wno-return-local-addr -Wno-unknown-pragmas -Wno-sign-compare -Wno-unused-variable -Wno-unused-but-set-variable -Wno-comment -Wno-return-type -Wno-format)
    add_executable(${PROJECT_NAME} ${SRCS} ${HEADERS})
    target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES} pthread pcap)
    target_link_libraries(${PROJECT_NAME} ${PCL_LIBRARIES} ${OpenCV_LIBRARIES} pcap ${CMAKE_CURRENT_SOURCE_DIR}/lib/libptvisualizier.so ${MRPT_LIBS})
    if(CMAKE_COMPILER_IS_GNUCXX AND NOT CMAKE_BUILD_TYPE MATCHES "Debug")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
    endif(CMAKE_COMPILER_IS_GNUCXX AND NOT CMAKE_BUILD_TYPE MATCHES "Debug")
endif()